Ensured Elefant name always aligns left no matter the custom site stylesheet.

--- a/apps/admin/css/top-bar.css
+++ b/apps/admin/css/top-bar.css
@@ -18,6 +18,7 @@ body {
 	font-size: 18px !important;
 	font-weight: bold;
 	font-family: Helvetica, Arial, sans-serif !important;
+	text-align: left;
 }
 
 	#admin-bar img {
